# librir

./: .coveragerc  .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  build.bat  build.sh  configure_ffmpeg  extra-requirements.txt  librir.pc.in  pytest.ini  requirements.txt.in  rir_config.h.in
3rd_64/: CMakeLists.txt  build-gcc.sh  build_ffmpeg.txt
3rd_64/ffmpeg-4.3-msvc/lib/: avcodec.lib  postproc.lib
3rd_64/ffmpeg-4.3-msvc/libavcodec/: packet.h  version.h
3rd_64/ffmpeg-4.3-msvc/libavdevice/: version.h
3rd_64/ffmpeg-4.3-msvc/libavfilter/: version.h
3rd_64/ffmpeg-4.3-msvc/libavformat/: avformat.h  version.h
3rd_64/ffmpeg-4.3-msvc/libavutil/: ffversion.h
3rd_64/ffmpeg-4.3-msvc/libpostproc/: version.h
3rd_64/ffmpeg-7.1-msvc/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
3rd_64/ffmpeg-7.1-msvc/libavutil/: ffversion.h
extra/: CMakeLists.txt  FFMPEGHandling.cmake
extra/blosc/: CMakeLists.txt  bitshuffle-avx2.c  bitshuffle-avx2.h  bitshuffle-generic.c  bitshuffle-generic.h  bitshuffle-sse2.c  bitshuffle-sse2.h  blosc-common.h  blosc-comp-features.h  blosc-export.h  blosc.c  blosc.h  blosclz.c  blosclz.h  blosclz_impl.inc  config.h.in  fastcopy.c  fastcopy.h  shuffle-avx2.c  shuffle-avx2.h  shuffle-generic.c  shuffle-generic.h  shuffle-sse2.c  shuffle-sse2.h  shuffle.c  shuffle.h
extra/blosc/win32/: pthread.c  pthread.h  stdint-windows.h
extra/charls/: annotations.h  api_abi.h  charls.h  charls_jpegls_decoder.cpp  charls_jpegls_encoder.cpp  charls_legacy.h  coding_parameters.h  color_transform.h  constants.h  context.h  context_run_mode.h  decoder_strategy.h  default_traits.h  encoder_strategy.h  interface.cpp  jls_codec_factory.h  jpeg_marker_code.h  jpeg_stream_reader.cpp  jpeg_stream_reader.h  jpeg_stream_writer.cpp  jpeg_stream_writer.h  jpegls.cpp  jpegls_error.cpp  jpegls_error.h  jpegls_preset_coding_parameters.h  jpegls_preset_parameters_type.h  lookup_table.h  lossless_traits.h  process_line.h  public_types.h  scan.h  util.h  version.cpp
extra/ffmpeg/: CMakeLists.txt
extra/jpeg-9b/: cderror.h  cdjpeg.h  jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jconfig.h  jcparam.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdpostct.c  jdsample.c  jdtrans.c  jerror.c  jerror.h  (+18 more)
extra/minizip/: adler32.c  compress.c  crc32.c  crc32.h  crypt.h  deflate.c  deflate.h  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  miniunz.c  mztools.c  mztools.h  trees.c  trees.h  uncompr.c  unzip.c  unzip.h  zconf.h  zip.c  zip.h  zlib.h  zutil.c  zutil.h
extra/zstd/: CMakeLists.txt  bitstream.h  cover.c  divsufsort.c  divsufsort.h  entropy_common.c  error_private.c  error_private.h  fse.h  fse_compress.c  fse_decompress.c  hash.c  huf.h  huf_compress.c  huf_decompress.c  mem.h  pool.c  pool.h  threading.c  threading.h  xxhash.h  zbuff.h  zbuff_common.c  zbuff_compress.c  zbuff_decompress.c  zdict.c  zdict.h  zstd.h  zstd_common.c  zstd_compress.c  zstd_decompress.c  zstd_errors.h  zstd_internal.h  zstd_legacy.h  zstd_opt.h  zstd_v01.c  zstd_v01.h  zstd_v02.c  zstd_v02.h  zstd_v03.c  (+11 more)
librir/: CMakeLists.txt  README.md  __init__.py
librir/LICENSES/: LICENSE-blosc.txt  LICENSE-zstd.txt
librir/geometry/: __init__.py
librir/low_level/: __init__.py  rir_geometry.py  rir_signal_processing.py  rir_tools.py  rir_video_io.py
librir/registration/: compute_registration.py  masked_registration_ecc.py
librir/signal_processing/: BadPixels.py  __init__.py
librir/tools/: FileAttributes.py  __init__.py  rir_tools.py
librir/video_io/: IRMovie.py  IRSaver.py  __init__.py  utils.py
plugins/: CMakeLists.txt
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cpp/geometry/: CMakeLists.txt  DrawPolygon.cpp  DrawPolygon.h  GeometryConfig.cmake.in  Polygon.cpp  Polygon.h  Primitives.h  geometry.cpp  geometry.h
src/cpp/signal_processing/: BadPixels.cpp  BadPixels.h  CMakeLists.txt  Filters.cpp  Filters.h  SignalProcessingConfig.cmake.in  signal_processing.cpp  signal_processing.h
src/cpp/tools/: CMakeLists.txt  FileAttributes.cpp  FileAttributes.h  FileLock.cpp  FileLock.h  Log.cpp  Log.h  Misc.cpp  Misc.h  ReadFileChunk.cpp  ReadFileChunk.h  SIMD.cpp  SIMD.h  ToolsConfig.cmake.in  tools.cpp  tools.h
src/cpp/video_io/: BaseCalibration.cpp  BaseCalibration.h  CMakeLists.txt  HCCLoader.cpp  HCCLoader.h  IRFileLoader.cpp  IRFileLoader.h  IRVideoLoader.cpp  IRVideoLoader.h  InstallFfmpeg.cmake  LutCalibration.cpp  LutCalibration.h  RetrieveFFMpegLibs.cmake  VideoIOConfig.cmake.in  ZFile.cpp  ZFile.h  h264.cpp  h264.h  video_io.cpp  video_io.h
src/geometry/: CMakeLists.txt  DrawPolygon.cpp  DrawPolygon.h  Polygon.h  Primitives.h  geometry.h
src/labview/: CMakeLists.txt  close-camera-file.vi  librir.aliases  librir.lvlib  librir.lvlps  librir.lvproj  open-camera-file.vi  read-image.vi
src/labview/h264/: add_image_lossless.vi  close_h264.vi  open_h264.vi  string-attribute-to-dll-format.vi
src/labview/tests/: read-first-image.vi  save-one-image-in-file.vi
src/python/: BuildWheel.cmake  CMakeLists.txt  README.md  cfg.yml  geometry_pybind11_wrapper.cpp  pyproject.toml.in  setup.py  setup.py.in  signal_processing_pybind11_wrapper.cpp  tools_pybind11_wrapper.cpp  video_io_pybind11_wrapper.cpp
src/python/librir/: README.md  __init__.py
src/signal_processing/: BadPixels.cpp  BadPixels.h  CMakeLists.txt  Filters.h  signal_processing.cpp  signal_processing.h
src/tools/: Log.cpp  ReadFileChunk.h  SIMD.cpp
src/video_io/: BaseCalibration.h  CMakeLists.txt  HCCLoader.h  IRFileLoader.cpp  IRVideoLoader.h  ZFile.cpp  video_io.cpp
tests/cpp/: CMakeLists.txt  test.cpp
tests/cpp/west/: CMakeLists.txt  test_HCC.cpp  (+2 more)
(+71 files in other folders)
