
add_subdirectory(cpp)



install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/librir
	DESTINATION ${CMAKE_INSTALL_PREFIX}
	FILES_MATCHING PATTERN "*.py"
)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/python/setup.py ${CMAKE_SOURCE_DIR}/CMakeLists.txt ${CMAKE_SOURCE_DIR}/README.md
		DESTINATION ${CMAKE_INSTALL_PREFIX}
)

install(DIRECTORY $${CMAKE_CURRENT_SOURCE_DIR}/python/librir/LICENSES 
		DESTINATION ${CMAKE_INSTALL_PREFIX}/librir
		FILES_MATCHING PATTERN "*.txt"
)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/python/librir/LICENSE 
		DESTINATION ${CMAKE_INSTALL_PREFIX}/librir
)

install(DIRECTORY ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}/
		DESTINATION ${CMAKE_INSTALL_PREFIX}/librir/libs
)
